height issue on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,8 +14,7 @@ body {
   background-size: cover;
   font-size: 16px;
   color: white;
-  height: 100vh;
-  max-height: -webkit-fill-available;
+  height: calc(100vh - calc(100vh - 100%));
   width: 100%;
   margin: 0;
 }
